--- a/Clinic Appointment Database Create/clinic-appointment-database.ipynb
+++ b/Clinic Appointment Database Create/clinic-appointment-database.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 3,
    "id": "51fe9f7c-64c0-4854-af5c-5e7efaace317",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 4,
    "id": "aaac18e8-8485-4959-9f7c-ebc560bd5207",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
     "PatientId = np.unique(np.random.randint(7330000000, 7340000000, npatients, dtype=np.int64))\n",
     "\n",
     "# Nominal\n",
-    "random_name_gender = np.loadtxt('../csv files/random-names/random-names-gender.csv', delimiter=',', unpack = True,  dtype=str)\n",
+    "random_name_gender = np.loadtxt('random-names/random-names-gender.csv', delimiter=',', unpack = True,  dtype=str)\n",
     "fullname = np.array([])\n",
     "for i in range(len(random_name_gender[0])):\n",
     "    fullname = np.append(fullname, random_name_gender[0][i].strip('\"') + ' ' + random_name_gender[1][i].strip('\"'))\n",
@@ -57,12 +57,12 @@
     "    'Age': Age,\n",
     "    'ContactNumber': ContactNumber\n",
     "})\n",
-    "patients_df.to_csv('../csv files/clinic-appointment/Patients.csv', index=False)"
+    "patients_df.to_csv('Patients.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 5,
    "id": "3ec3b4e4-7a2b-44f0-a599-216eb3a12fab",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
        "(1000, 5)"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 6,
    "id": "a842d875-37a6-4f69-801f-b07ddfa8edcb",
    "metadata": {},
    "outputs": [
@@ -118,43 +118,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7330003330</td>\n",
+       "      <td>7330000188</td>\n",
        "      <td>Jordan Alexander</td>\n",
        "      <td>\"Male\"</td>\n",
-       "      <td>43</td>\n",
-       "      <td>07900009640</td>\n",
+       "      <td>58</td>\n",
+       "      <td>07900000255</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7330033792</td>\n",
+       "      <td>7330001100</td>\n",
        "      <td>Cherry Williams</td>\n",
        "      <td>\"Female\"</td>\n",
-       "      <td>28</td>\n",
-       "      <td>07900024701</td>\n",
+       "      <td>83</td>\n",
+       "      <td>07900039813</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7330053992</td>\n",
+       "      <td>7330013040</td>\n",
        "      <td>Vanessa Taylor</td>\n",
        "      <td>\"Female\"</td>\n",
-       "      <td>79</td>\n",
-       "      <td>07900033574</td>\n",
+       "      <td>46</td>\n",
+       "      <td>07900041110</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7330095427</td>\n",
+       "      <td>7330038611</td>\n",
        "      <td>Richard Johnson</td>\n",
        "      <td>\"Male\"</td>\n",
-       "      <td>68</td>\n",
-       "      <td>07900035050</td>\n",
+       "      <td>67</td>\n",
+       "      <td>07900049383</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7330097134</td>\n",
+       "      <td>7330039132</td>\n",
        "      <td>Rafael Watson</td>\n",
        "      <td>\"Male\"</td>\n",
-       "      <td>23</td>\n",
-       "      <td>07900061069</td>\n",
+       "      <td>28</td>\n",
+       "      <td>07900050838</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -162,14 +162,14 @@
       ],
       "text/plain": [
        "    PatientId              Name    Gender  Age ContactNumber\n",
-       "0  7330003330  Jordan Alexander    \"Male\"   43   07900009640\n",
-       "1  7330033792   Cherry Williams  \"Female\"   28   07900024701\n",
-       "2  7330053992    Vanessa Taylor  \"Female\"   79   07900033574\n",
-       "3  7330095427   Richard Johnson    \"Male\"   68   07900035050\n",
-       "4  7330097134     Rafael Watson    \"Male\"   23   07900061069"
+       "0  7330000188  Jordan Alexander    \"Male\"   58   07900000255\n",
+       "1  7330001100   Cherry Williams  \"Female\"   83   07900039813\n",
+       "2  7330013040    Vanessa Taylor  \"Female\"   46   07900041110\n",
+       "3  7330038611   Richard Johnson    \"Male\"   67   07900049383\n",
+       "4  7330039132     Rafael Watson    \"Male\"   28   07900050838"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 7,
    "id": "b8e28c25-40c9-4dcd-88c8-222c31ae5b32",
    "metadata": {},
    "outputs": [],
@@ -222,12 +222,12 @@
     "    'DoctorName': appointed_doctor,\n",
     "    'AppointmentDate': appointment_dates\n",
     "})\n",
-    "appointments_df.to_csv('../csv files/clinic-appointment/Appointments.csv', index=False)"
+    "appointments_df.to_csv('Appointments.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 8,
    "id": "5b90ed22-82fe-4e69-bde6-4dce6a1a5042",
    "metadata": {},
    "outputs": [
@@ -260,48 +260,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7332419578</td>\n",
+       "      <td>7332529926</td>\n",
        "      <td>Dr. Wilson</td>\n",
-       "      <td>2024-07-05 16:54</td>\n",
+       "      <td>2024-11-16 17:20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7336335469</td>\n",
-       "      <td>Dr. Wilson</td>\n",
-       "      <td>2024-08-06 15:42</td>\n",
+       "      <td>7330210571</td>\n",
+       "      <td>Dr. Miller</td>\n",
+       "      <td>2024-05-12 12:36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7335274373</td>\n",
+       "      <td>7330616815</td>\n",
        "      <td>Dr. Moore</td>\n",
-       "      <td>2024-10-08 11:55</td>\n",
+       "      <td>2024-12-23 17:56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7332456379</td>\n",
-       "      <td>Dr. Brown</td>\n",
-       "      <td>2024-10-17 16:25</td>\n",
+       "      <td>7330685032</td>\n",
+       "      <td>Dr. Smith</td>\n",
+       "      <td>2024-03-06 17:11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7331569279</td>\n",
-       "      <td>Dr. Williams</td>\n",
-       "      <td>2024-03-11 08:13</td>\n",
+       "      <td>7339463173</td>\n",
+       "      <td>Dr. Taylor</td>\n",
+       "      <td>2024-03-08 09:02</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    PatientID    DoctorName   AppointmentDate\n",
-       "0  7332419578    Dr. Wilson  2024-07-05 16:54\n",
-       "1  7336335469    Dr. Wilson  2024-08-06 15:42\n",
-       "2  7335274373     Dr. Moore  2024-10-08 11:55\n",
-       "3  7332456379     Dr. Brown  2024-10-17 16:25\n",
-       "4  7331569279  Dr. Williams  2024-03-11 08:13"
+       "    PatientID  DoctorName   AppointmentDate\n",
+       "0  7332529926  Dr. Wilson  2024-11-16 17:20\n",
+       "1  7330210571  Dr. Miller  2024-05-12 12:36\n",
+       "2  7330616815   Dr. Moore  2024-12-23 17:56\n",
+       "3  7330685032   Dr. Smith  2024-03-06 17:11\n",
+       "4  7339463173  Dr. Taylor  2024-03-08 09:02"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 9,
    "id": "bdc6c219-6481-441a-ac39-1179cc112d70",
    "metadata": {},
    "outputs": [],
@@ -339,12 +339,12 @@
     "    'Position': doctor_positions_assigned,\n",
     "    'Specialty': doctor_specialties_assigned\n",
     "})\n",
-    "doctors_df.to_csv('../csv files/clinic-appointment/Doctors.csv', index=False)"
+    "doctors_df.to_csv('Doctors.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 10,
    "id": "3511e23b-cfd6-4225-a48b-895a3152af7f",
    "metadata": {},
    "outputs": [
@@ -378,31 +378,31 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Dr. Smith</td>\n",
-       "      <td>Salaried GP</td>\n",
-       "      <td>Neurology</td>\n",
+       "      <td>Consultant</td>\n",
+       "      <td>Orthopedics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Dr. Johnson</td>\n",
-       "      <td>Salaried GP</td>\n",
-       "      <td>Orthopedics</td>\n",
+       "      <td>Consultant</td>\n",
+       "      <td>Oncology</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Dr. Williams</td>\n",
        "      <td>Locum GP</td>\n",
-       "      <td>Cardiology</td>\n",
+       "      <td>Orthopedics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Dr. Jones</td>\n",
        "      <td>Locum GP</td>\n",
-       "      <td>General Medicine</td>\n",
+       "      <td>Neurology</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Dr. Brown</td>\n",
-       "      <td>GP Partner</td>\n",
+       "      <td>Medical Director</td>\n",
        "      <td>Orthopedics</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -410,15 +410,15 @@
        "</div>"
       ],
       "text/plain": [
-       "     DoctorName     Position         Specialty\n",
-       "0     Dr. Smith  Salaried GP         Neurology\n",
-       "1   Dr. Johnson  Salaried GP       Orthopedics\n",
-       "2  Dr. Williams     Locum GP        Cardiology\n",
-       "3     Dr. Jones     Locum GP  General Medicine\n",
-       "4     Dr. Brown   GP Partner       Orthopedics"
+       "     DoctorName          Position    Specialty\n",
+       "0     Dr. Smith        Consultant  Orthopedics\n",
+       "1   Dr. Johnson        Consultant     Oncology\n",
+       "2  Dr. Williams          Locum GP  Orthopedics\n",
+       "3     Dr. Jones          Locum GP    Neurology\n",
+       "4     Dr. Brown  Medical Director  Orthopedics"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 11,
    "id": "9b9511b3-e7c4-47d9-b13a-cde4a7e2b139",
    "metadata": {},
    "outputs": [],
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 12,
    "id": "9e55da9a-bd2e-46e0-84a3-d1a273e73bf0",
    "metadata": {},
    "outputs": [
@@ -496,33 +496,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7337305481</td>\n",
-       "      <td>2017-07-05</td>\n",
+       "      <td>7338068010</td>\n",
+       "      <td>2020-04-03</td>\n",
        "      <td>Follow-Up</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7332658263</td>\n",
-       "      <td>2021-06-28</td>\n",
-       "      <td>Completed</td>\n",
+       "      <td>7339071516</td>\n",
+       "      <td>2020-03-18</td>\n",
+       "      <td>Follow-Up</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7337201580</td>\n",
-       "      <td>2016-01-26</td>\n",
-       "      <td>Completed</td>\n",
+       "      <td>7338563633</td>\n",
+       "      <td>2021-04-16</td>\n",
+       "      <td>Follow-Up</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7334334124</td>\n",
-       "      <td>2013-07-22</td>\n",
-       "      <td>Ongoing</td>\n",
+       "      <td>7335368435</td>\n",
+       "      <td>2017-11-13</td>\n",
+       "      <td>Follow-Up</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7339936017</td>\n",
-       "      <td>2017-05-24</td>\n",
-       "      <td>Follow-Up</td>\n",
+       "      <td>7332110182</td>\n",
+       "      <td>2011-03-04</td>\n",
+       "      <td>Completed</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -530,14 +530,14 @@
       ],
       "text/plain": [
        "    PatientID TreatmentDate     Status\n",
-       "0  7337305481    2017-07-05  Follow-Up\n",
-       "1  7332658263    2021-06-28  Completed\n",
-       "2  7337201580    2016-01-26  Completed\n",
-       "3  7334334124    2013-07-22    Ongoing\n",
-       "4  7339936017    2017-05-24  Follow-Up"
+       "0  7338068010    2020-04-03  Follow-Up\n",
+       "1  7339071516    2020-03-18  Follow-Up\n",
+       "2  7338563633    2021-04-16  Follow-Up\n",
+       "3  7335368435    2017-11-13  Follow-Up\n",
+       "4  7332110182    2011-03-04  Completed"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 13,
    "id": "9a8205b5-8c6f-4b9a-b6c0-75f9c9ec5588",
    "metadata": {},
    "outputs": [
@@ -573,14 +573,14 @@
     "treatment_plans_df.loc[random_indices, 'TreatmentDate'] = np.nan\n",
     "treatment_plans_df.loc[random_indices, 'Status'] = np.nan\n",
     "\n",
-    "treatment_plans_df.to_csv('../csv files/clinic-appointment/Treatments.csv', index=False)\n",
+    "treatment_plans_df.to_csv('Treatments.csv', index=False)\n",
     "# Check and print how many values are NaN\n",
     "print(treatment_plans_df.isna().sum()) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 14,
    "id": "848b4fa0-1c6f-4b10-8a40-eac2e30f20b7",
    "metadata": {},
    "outputs": [
@@ -588,13 +588,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[631 886  30 905 371]\n",
-      "      PatientId              Name    Gender  Age ContactNumber\n",
-      "631  7336248749        Max Harper    \"Male\"   44   07906516527\n",
-      "886  7338978948      Mike Chapman    \"Male\"   29   07908960041\n",
-      "30   7330348121  Camila Armstrong  \"Female\"   85   07900253048\n",
-      "905  7339173412       Lana Turner  \"Female\"   58   07909119035\n",
-      "371  7333837418     Violet Morgan  \"Female\"   79   07903770585\n",
+      "[421 529 245 737  28]\n",
+      "      PatientId             Name    Gender  Age ContactNumber\n",
+      "421  7334316062   Heather Barnes  \"Female\"   26   07904626573\n",
+      "529  7335380001     Jacob Warren    \"Male\"   74   07905746811\n",
+      "245  7332460045      Clark Clark    \"Male\"   20   07902815343\n",
+      "737  7337355337     Edith Howard  \"Female\"   30   07907444035\n",
+      "28   7330254145  Kristian Watson    \"Male\"   60   07900324965\n",
       "(1005, 5)\n"
      ]
     }
@@ -616,7 +616,7 @@
     "print(patients_with_duplicates.shape)\n",
     "patients_with_duplicates.tail()\n",
     "\n",
-    "patients_with_duplicates.to_csv('../csv files/clinic-appointment/Patients.csv', index=False)"
+    "patients_with_duplicates.to_csv('Patients.csv', index=False)"
    ]
   },
   {
