--- a/Clinic Appointment Database Create/clinic-appointment-database.ipynb
+++ b/Clinic Appointment Database Create/clinic-appointment-database.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "id": "51fe9f7c-64c0-4854-af5c-5e7efaace317",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "id": "aaac18e8-8485-4959-9f7c-ebc560bd5207",
    "metadata": {},
    "outputs": [],
@@ -56,13 +56,12 @@
     "    'Gender': gender,\n",
     "    'Age': Age,\n",
     "    'ContactNumber': ContactNumber\n",
-    "})\n",
-    "patients_df.to_csv('Patients.csv', index=False)"
+    "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "id": "3ec3b4e4-7a2b-44f0-a599-216eb3a12fab",
    "metadata": {},
    "outputs": [
@@ -72,7 +71,7 @@
        "(1000, 5)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "id": "a842d875-37a6-4f69-801f-b07ddfa8edcb",
    "metadata": {},
    "outputs": [
@@ -118,43 +117,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7330000188</td>\n",
+       "      <td>7330010724</td>\n",
        "      <td>Jordan Alexander</td>\n",
        "      <td>\"Male\"</td>\n",
-       "      <td>58</td>\n",
-       "      <td>07900000255</td>\n",
+       "      <td>34</td>\n",
+       "      <td>07900020525</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7330001100</td>\n",
+       "      <td>7330027737</td>\n",
        "      <td>Cherry Williams</td>\n",
        "      <td>\"Female\"</td>\n",
-       "      <td>83</td>\n",
-       "      <td>07900039813</td>\n",
+       "      <td>21</td>\n",
+       "      <td>07900023907</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7330013040</td>\n",
+       "      <td>7330043846</td>\n",
        "      <td>Vanessa Taylor</td>\n",
        "      <td>\"Female\"</td>\n",
-       "      <td>46</td>\n",
-       "      <td>07900041110</td>\n",
+       "      <td>58</td>\n",
+       "      <td>07900031972</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7330038611</td>\n",
+       "      <td>7330054814</td>\n",
        "      <td>Richard Johnson</td>\n",
        "      <td>\"Male\"</td>\n",
        "      <td>67</td>\n",
-       "      <td>07900049383</td>\n",
+       "      <td>07900037965</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7330039132</td>\n",
+       "      <td>7330064265</td>\n",
        "      <td>Rafael Watson</td>\n",
        "      <td>\"Male\"</td>\n",
-       "      <td>28</td>\n",
-       "      <td>07900050838</td>\n",
+       "      <td>55</td>\n",
+       "      <td>07900044176</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -162,14 +161,14 @@
       ],
       "text/plain": [
        "    PatientId              Name    Gender  Age ContactNumber\n",
-       "0  7330000188  Jordan Alexander    \"Male\"   58   07900000255\n",
-       "1  7330001100   Cherry Williams  \"Female\"   83   07900039813\n",
-       "2  7330013040    Vanessa Taylor  \"Female\"   46   07900041110\n",
-       "3  7330038611   Richard Johnson    \"Male\"   67   07900049383\n",
-       "4  7330039132     Rafael Watson    \"Male\"   28   07900050838"
+       "0  7330010724  Jordan Alexander    \"Male\"   34   07900020525\n",
+       "1  7330027737   Cherry Williams  \"Female\"   21   07900023907\n",
+       "2  7330043846    Vanessa Taylor  \"Female\"   58   07900031972\n",
+       "3  7330054814   Richard Johnson    \"Male\"   67   07900037965\n",
+       "4  7330064265     Rafael Watson    \"Male\"   55   07900044176"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "id": "b8e28c25-40c9-4dcd-88c8-222c31ae5b32",
    "metadata": {},
    "outputs": [],
@@ -221,13 +220,12 @@
     "    'PatientID': patient_ids,\n",
     "    'DoctorName': appointed_doctor,\n",
     "    'AppointmentDate': appointment_dates\n",
-    "})\n",
-    "appointments_df.to_csv('Appointments.csv', index=False)"
+    "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "id": "5b90ed22-82fe-4e69-bde6-4dce6a1a5042",
    "metadata": {},
    "outputs": [
@@ -260,48 +258,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7332529926</td>\n",
+       "      <td>7331123028</td>\n",
        "      <td>Dr. Wilson</td>\n",
-       "      <td>2024-11-16 17:20</td>\n",
+       "      <td>2024-12-16 13:38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7330210571</td>\n",
+       "      <td>7335632885</td>\n",
        "      <td>Dr. Miller</td>\n",
-       "      <td>2024-05-12 12:36</td>\n",
+       "      <td>2024-03-01 15:53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7330616815</td>\n",
-       "      <td>Dr. Moore</td>\n",
-       "      <td>2024-12-23 17:56</td>\n",
+       "      <td>7337931158</td>\n",
+       "      <td>Dr. Brown</td>\n",
+       "      <td>2024-09-14 08:04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7330685032</td>\n",
-       "      <td>Dr. Smith</td>\n",
-       "      <td>2024-03-06 17:11</td>\n",
+       "      <td>7331137799</td>\n",
+       "      <td>Dr. Moore</td>\n",
+       "      <td>2024-01-04 13:43</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7339463173</td>\n",
-       "      <td>Dr. Taylor</td>\n",
-       "      <td>2024-03-08 09:02</td>\n",
+       "      <td>7337684968</td>\n",
+       "      <td>Dr. Johnson</td>\n",
+       "      <td>2024-01-17 10:02</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    PatientID  DoctorName   AppointmentDate\n",
-       "0  7332529926  Dr. Wilson  2024-11-16 17:20\n",
-       "1  7330210571  Dr. Miller  2024-05-12 12:36\n",
-       "2  7330616815   Dr. Moore  2024-12-23 17:56\n",
-       "3  7330685032   Dr. Smith  2024-03-06 17:11\n",
-       "4  7339463173  Dr. Taylor  2024-03-08 09:02"
+       "    PatientID   DoctorName   AppointmentDate\n",
+       "0  7331123028   Dr. Wilson  2024-12-16 13:38\n",
+       "1  7335632885   Dr. Miller  2024-03-01 15:53\n",
+       "2  7337931158    Dr. Brown  2024-09-14 08:04\n",
+       "3  7331137799    Dr. Moore  2024-01-04 13:43\n",
+       "4  7337684968  Dr. Johnson  2024-01-17 10:02"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "id": "bdc6c219-6481-441a-ac39-1179cc112d70",
    "metadata": {},
    "outputs": [],
@@ -338,13 +336,12 @@
     "    'DoctorName': doctor_names,\n",
     "    'Position': doctor_positions_assigned,\n",
     "    'Specialty': doctor_specialties_assigned\n",
-    "})\n",
-    "doctors_df.to_csv('Doctors.csv', index=False)"
+    "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "id": "3511e23b-cfd6-4225-a48b-895a3152af7f",
    "metadata": {},
    "outputs": [
@@ -378,47 +375,47 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Dr. Smith</td>\n",
-       "      <td>Consultant</td>\n",
+       "      <td>Senior Consultant</td>\n",
        "      <td>Orthopedics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Dr. Johnson</td>\n",
-       "      <td>Consultant</td>\n",
-       "      <td>Oncology</td>\n",
+       "      <td>Medical Director</td>\n",
+       "      <td>Psychiatry</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Dr. Williams</td>\n",
        "      <td>Locum GP</td>\n",
-       "      <td>Orthopedics</td>\n",
+       "      <td>Pediatrics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Dr. Jones</td>\n",
-       "      <td>Locum GP</td>\n",
-       "      <td>Neurology</td>\n",
+       "      <td>Clinical Lead</td>\n",
+       "      <td>Emergency Medicine</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Dr. Brown</td>\n",
-       "      <td>Medical Director</td>\n",
-       "      <td>Orthopedics</td>\n",
+       "      <td>Senior Consultant</td>\n",
+       "      <td>Emergency Medicine</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     DoctorName          Position    Specialty\n",
-       "0     Dr. Smith        Consultant  Orthopedics\n",
-       "1   Dr. Johnson        Consultant     Oncology\n",
-       "2  Dr. Williams          Locum GP  Orthopedics\n",
-       "3     Dr. Jones          Locum GP    Neurology\n",
-       "4     Dr. Brown  Medical Director  Orthopedics"
+       "     DoctorName           Position           Specialty\n",
+       "0     Dr. Smith  Senior Consultant         Orthopedics\n",
+       "1   Dr. Johnson   Medical Director          Psychiatry\n",
+       "2  Dr. Williams           Locum GP          Pediatrics\n",
+       "3     Dr. Jones      Clinical Lead  Emergency Medicine\n",
+       "4     Dr. Brown  Senior Consultant  Emergency Medicine"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "id": "9b9511b3-e7c4-47d9-b13a-cde4a7e2b139",
    "metadata": {},
    "outputs": [],
@@ -463,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "id": "9e55da9a-bd2e-46e0-84a3-d1a273e73bf0",
    "metadata": {},
    "outputs": [
@@ -496,33 +493,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7338068010</td>\n",
-       "      <td>2020-04-03</td>\n",
-       "      <td>Follow-Up</td>\n",
+       "      <td>7337632898</td>\n",
+       "      <td>2010-09-22</td>\n",
+       "      <td>Ongoing</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7339071516</td>\n",
-       "      <td>2020-03-18</td>\n",
-       "      <td>Follow-Up</td>\n",
+       "      <td>7337382272</td>\n",
+       "      <td>2022-02-14</td>\n",
+       "      <td>Completed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7338563633</td>\n",
-       "      <td>2021-04-16</td>\n",
-       "      <td>Follow-Up</td>\n",
+       "      <td>7335826536</td>\n",
+       "      <td>2011-04-25</td>\n",
+       "      <td>Ongoing</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7335368435</td>\n",
-       "      <td>2017-11-13</td>\n",
-       "      <td>Follow-Up</td>\n",
+       "      <td>7331742043</td>\n",
+       "      <td>2020-10-27</td>\n",
+       "      <td>Completed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7332110182</td>\n",
-       "      <td>2011-03-04</td>\n",
-       "      <td>Completed</td>\n",
+       "      <td>7339899528</td>\n",
+       "      <td>2023-08-14</td>\n",
+       "      <td>Follow-Up</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -530,14 +527,14 @@
       ],
       "text/plain": [
        "    PatientID TreatmentDate     Status\n",
-       "0  7338068010    2020-04-03  Follow-Up\n",
-       "1  7339071516    2020-03-18  Follow-Up\n",
-       "2  7338563633    2021-04-16  Follow-Up\n",
-       "3  7335368435    2017-11-13  Follow-Up\n",
-       "4  7332110182    2011-03-04  Completed"
+       "0  7337632898    2010-09-22    Ongoing\n",
+       "1  7337382272    2022-02-14  Completed\n",
+       "2  7335826536    2011-04-25    Ongoing\n",
+       "3  7331742043    2020-10-27  Completed\n",
+       "4  7339899528    2023-08-14  Follow-Up"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "id": "9a8205b5-8c6f-4b9a-b6c0-75f9c9ec5588",
    "metadata": {},
    "outputs": [
@@ -573,14 +570,13 @@
     "treatment_plans_df.loc[random_indices, 'TreatmentDate'] = np.nan\n",
     "treatment_plans_df.loc[random_indices, 'Status'] = np.nan\n",
     "\n",
-    "treatment_plans_df.to_csv('Treatments.csv', index=False)\n",
     "# Check and print how many values are NaN\n",
     "print(treatment_plans_df.isna().sum()) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "id": "848b4fa0-1c6f-4b10-8a40-eac2e30f20b7",
    "metadata": {},
    "outputs": [
@@ -588,15 +584,101 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[421 529 245 737  28]\n",
-      "      PatientId             Name    Gender  Age ContactNumber\n",
-      "421  7334316062   Heather Barnes  \"Female\"   26   07904626573\n",
-      "529  7335380001     Jacob Warren    \"Male\"   74   07905746811\n",
-      "245  7332460045      Clark Clark    \"Male\"   20   07902815343\n",
-      "737  7337355337     Edith Howard  \"Female\"   30   07907444035\n",
-      "28   7330254145  Kristian Watson    \"Male\"   60   07900324965\n",
+      "[959 126 966 847 698]\n",
+      "      PatientId               Name    Gender  Age ContactNumber\n",
+      "959  7339603489      Maya Anderson  \"Female\"   60   07909602415\n",
+      "126  7331245092    Sarah Alexander  \"Female\"   68   07901163318\n",
+      "966  7339657750     Justin Roberts    \"Male\"   18   07909677079\n",
+      "847  7338548972      Carlos Murray    \"Male\"   98   07908583007\n",
+      "698  7337151121  Frederick Roberts    \"Male\"   92   07907148246\n",
       "(1005, 5)\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PatientId</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>ContactNumber</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1000</th>\n",
+       "      <td>7335420181</td>\n",
+       "      <td>Arthur Cooper</td>\n",
+       "      <td>\"Male\"</td>\n",
+       "      <td>94</td>\n",
+       "      <td>07905379046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1001</th>\n",
+       "      <td>7335262096</td>\n",
+       "      <td>Jacob Warren</td>\n",
+       "      <td>\"Male\"</td>\n",
+       "      <td>45</td>\n",
+       "      <td>07905191470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1002</th>\n",
+       "      <td>7330232443</td>\n",
+       "      <td>Jordan Walker</td>\n",
+       "      <td>\"Male\"</td>\n",
+       "      <td>43</td>\n",
+       "      <td>07900163132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1003</th>\n",
+       "      <td>7335000937</td>\n",
+       "      <td>Alexander Johnston</td>\n",
+       "      <td>\"Male\"</td>\n",
+       "      <td>30</td>\n",
+       "      <td>07905038565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1004</th>\n",
+       "      <td>7339657750</td>\n",
+       "      <td>Justin Roberts</td>\n",
+       "      <td>\"Male\"</td>\n",
+       "      <td>18</td>\n",
+       "      <td>07909677079</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       PatientId                Name  Gender  Age ContactNumber\n",
+       "1000  7335420181       Arthur Cooper  \"Male\"   94   07905379046\n",
+       "1001  7335262096        Jacob Warren  \"Male\"   45   07905191470\n",
+       "1002  7330232443       Jordan Walker  \"Male\"   43   07900163132\n",
+       "1003  7335000937  Alexander Johnston  \"Male\"   30   07905038565\n",
+       "1004  7339657750      Justin Roberts  \"Male\"   18   07909677079"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -614,18 +696,21 @@
     "print(random_indices)\n",
     "print(duplicates)\n",
     "print(patients_with_duplicates.shape)\n",
-    "patients_with_duplicates.tail()\n",
-    "\n",
-    "patients_with_duplicates.to_csv('Patients.csv', index=False)"
+    "patients_with_duplicates.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "cc7de2ec-e524-437f-a4b5-c9fc07c9416c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "patients_with_duplicates.to_csv('Patients.csv', index=False)\n",
+    "appointments_df.to_csv('Appointments.csv', index=False)\n",
+    "doctors_df.to_csv('Doctors.csv', index=False)\n",
+    "treatment_plans_df.to_csv('Treatments.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
